tests/compiletests/ui/lang/unions/n_to_m.stderr
error: cannot cast between pointer types
       from `*struct (u64, u32) { u64, u32 }`
         to `*u32`
  --> <$DIR/n_to_m.rs>:15:15
   |
LL |     let bla = MyUnion { a: (42, 123) };
   |               ^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: used from within `n_to_m::union_mixed_types`
  --> <$DIR/n_to_m.rs>:15:15
   |
LL |     let bla = MyUnion { a: (42, 123) };
   |               ^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `union_mixed_types`
  --> <$DIR/n_to_m.rs>:12:8
   |
LL | pub fn union_mixed_types(
   |        ^^^^^^^^^^^^^^^^^

error: cannot cast between pointer types
       from `*u32`
         to `*u64`
  --> <$DIR/n_to_m.rs>:15:15
   |
LL |     let bla = MyUnion { a: (42, 123) };
   |               ^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: used from within `n_to_m::union_mixed_types`
  --> <$DIR/n_to_m.rs>:15:15
   |
LL |     let bla = MyUnion { a: (42, 123) };
   |               ^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `union_mixed_types`
  --> <$DIR/n_to_m.rs>:12:8
   |
LL | pub fn union_mixed_types(
   |        ^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

